# ITMO-IS-ADS

./: README.md
SEM1/LW1/: A. Помогите Даше решить проблему.cpp  B. Сдвинь меня, если сможешь.cpp  C. Покупка друзей.cpp  CMakeLists.txt  D. Игра Престолов.cpp  E. Зазеркалье.cpp  F. Студенты всегда хотят спать.cpp  G. Компромисс.cpp  I. Гений трейдинга.cpp
SEM1/LW2/: A. Дедовы тапки.cpp  B. Паттинсон.cpp  C. Любовь жестока.cpp  CMakeLists.txt  D. Анти-QuickSort.cpp  E. Рейтинг.cpp  F. Нейроночка.cpp  G. Непрерывное техническое образование.cpp
SEM1/LW3/: A. Рейв и Тектоник.cpp  B. Юность в сапогах.cpp  C. т.о.ч.к.а..cpp  CMakeLists.txt  D. Сокровища древних пирамид.cpp  F. Делу время - потехе час!.cpp  G. Спасение земель Русских.cpp
SEM1/LW4/: A. Пирамида ли?.cpp  B. Реализуйте приоритетную очередь.cpp  C. Шаверма патруль.cpp  CMakeLists.txt  D. Я покорю всю Россию.cpp  E. Величайший кроссовер.cpp
SEM1/LW5/: A. Ёлки-палки 2.0.cpp  B. Предки - наше всё.cpp  C. И здесь К-ый максимум....cpp  CMakeLists.txt  D. Ёлки-палки.cpp  E. Три друга.cpp  F. Подельник.cpp  G. Всё давай. Я очень занятой..cpp
SEM1/LW6/: A. Проверка сбалансированности.cpp  B. Делаю я левый поворот.cpp  C. Вставка в АВЛ-дерево.cpp  CMakeLists.txt  D. Очистка телефона.cpp  E. Три друга 2: возвращение.cpp
SEM1/LW7/: A. Двоичный код Грея.cpp  B. Пусть утро будет нежным!.cpp  CMakeLists.txt
SEM2/LW10/: A. АРАТАКИ РЕЙГЕН.cpp  B. Истребители демонов.cpp  CMakeLists.txt  D. Очень яблок хочется....cpp  E. Грязные делишки.cpp  F. Результат двух миллионов лет работы.cpp  G. Побег Поньо.cpp  H. Мугивары.cpp  J. А где Канеки?.cpp
SEM2/LW11/: A. Борьба за сахар.cpp  B. Шёпот далёких звёзд.cpp  CMakeLists.txt  D. Я не продаюсь, но....cpp  G. Нighway of a lifetime.cpp
SEM2/LW12/: C. Что же такое множество?.cpp  CMakeLists.txt  D. Тест.cpp  E. Биба и Боба.cpp
SEM2/LW13/: A. 1984.cpp  B. Хогвартс.cpp  C. Лиана Клубина.cpp  CMakeLists.txt  F. Секретная служба.cpp
SEM2/LW8/: A. Ярмарка судьбы.cpp  B. Месть Менады.cpp  C. Порванное ожерелье.cpp  CMakeLists.txt  D. Песня Сирин.cpp  E. Беги и не возвращайся.cpp  F. Древняя карта архипелага.cpp  H. Амрита.cpp  I. Гидра или не гидра, вот в чём вопрос....cpp
SEM2/LW9/: A. Конец или Начало.cpp  C. Если я вас больше не увижу.cpp  CMakeLists.txt  D. You can, Ken!.cpp  E. Ничто нигде и никогда.cpp  F. Сокровенные желания.cpp
