cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 23)

add_executable(a "A. Дедовы тапки.cpp")
add_executable(b "B. Паттинсон.cpp")
add_executable(c "C. Любовь жестока.cpp")
add_executable(d "D. Анти-QuickSort.cpp")
add_executable(e "E. Рейтинг.cpp")
add_executable(f "F. Нейроночка.cpp")
add_executable(g "G. Непрерывное техническое образование.cpp")

