cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 23)

add_executable(a "A. Рейв и Тектоник.cpp")
add_executable(b "B. Юность в сапогах.cpp")
add_executable(c "C. т.о.ч.к.а..cpp")
add_executable(d "D. Сокровища древних пирамид.cpp")
add_executable(f "F. Делу время - потехе час!.cpp")
add_executable(g "G. Спасение земель Русских.cpp")
