cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 23)

add_executable(a "A. Пирамида ли?.cpp")
add_executable(b "B. Реализуйте приоритетную очередь.cpp")
add_executable(c "C. Шаверма патруль.cpp")
add_executable(d "D. Я покорю всю Россию.cpp")
add_executable(e "E. Величайший кроссовер.cpp")
