cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 23)

add_executable(a "A. Проверка сбалансированности.cpp")
add_executable(b "B. Делаю я левый поворот.cpp")
add_executable(c "C. Вставка в АВЛ-дерево.cpp")
add_executable(d "D. Очистка телефона.cpp")
add_executable(e "E. Три друга 2: возвращение.cpp")
