cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 23)

add_executable(a "A. Конец или Начало.cpp")
add_executable(c "C. Если я вас больше не увижу.cpp")
add_executable(d "D. You can, Ken!.cpp")
add_executable(e "E. Ничто нигде и никогда.cpp")
add_executable(f "F. Сокровенные желания.cpp")
